--- a/modal/package.json
+++ b/modal/package.json
@@ -5,6 +5,13 @@
 "keywords": ["react", "components", "modal"],
   "version": "0.0.1",
   "private": false,
+  "main": "dist/index.js",
+"module": "dist/index.js",
+"files": [ "dist", "README.md" ],
+"repository": {
+    "type": "git",
+    "url": "git+  https://github.com/stepheniki/modal_by_Stephen_Thomas/tree/main/modal"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +22,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "NODE_ENV=production babel src/lib --out-dir dist --copy-files",
